@@ -7,6 +7,8 @@ PHP 4                                                                      NEWS
 - Fixed crash bug when non-existing save/serializer handler was used. (Jani)
 - Fixed memory leak in gethostbynamel() if an error occurs. (Sara)
 - Fixed FastCGI being unable to bind to a specific IP. (Sascha)
+- Fixed bug #25570 (Possible crash in apache2handler when zend_bailout called
+  outside of zend_try {} block). (Ilia)
 - Fixed bug #25530 (checkdate() incorrectly handles floats). (Ilia)
 - Fixed bug #25525 (ldap_explode_dn() crashes when passed invalid dn).
   (Sara, patch by: mikael dot suvi at trigger dot ee)
